web-core 1.5. 2nd-stage

--- a/repair.html
+++ b/repair.html
@@ -75,8 +75,13 @@
         <button class="brands__show-more-button sm lg">
             Показать все
         </button>
+        <button class="brands__hide-button hide sm lg">
+            Скрыть
+        </button>
+
     </section>
     <script src="./swiper.min.js"></script>
     <script src="./slider.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
